[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buildah_wrapper"]

[project]
name = "buildah-wrapper"
version = "2.0.2.6"
authors = [
    {name = "EpicMorg", email = "developer@epicm.org"}
]

maintainers = [
    {name = "EpicMorg", email = "developer@epicm.org"}
]
dependencies = [
  "PyYAML",
  "python-dotenv",
  "termcolor",
  "pydantic-settings",
  "colorlog"
]
description = "EpicMorg: Buildah-Compose Wrapper - CLI wrapper for Buildah build system"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9"
keywords = ["buildah", "docker", "oci", "build", "wrapper", "ci"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
buildah-wrapper = "buildah_wrapper.buildah_wrapper:main"

[project.urls]
"Homepage" = "https://github.com/EpicMorg/buildah-wrapper"
"Documentation" = "https://github.com/EpicMorg/buildah-wrapper/blob/master/README.md"
"Repository" = "https://github.com/EpicMorg/buildah-wrapper.git"
"Bug Tracker" = "https://github.com/EpicMorg/buildah-wrapper/issues"
"Changelog" = "https://github.com/EpicMorg/buildah-wrapper/blob/master/CHANGELOG.md"